# Nebulae-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  test.cpp
libs/components/: CMakeLists.txt
libs/components/include/nebulae/components/: Transform.hpp
libs/core/: CMakeLists.txt
libs/core/include/nebulae/core/: Identifier.hpp  Object.hpp
libs/core/include/nebulae/core/comp/: Component.hpp  ComponentHolder.hpp  ComponentHolder.ipp
libs/core/include/nebulae/core/vector/: Vector2D.hpp  Vector3D.hpp
libs/core/include/nebulae/core/vector/ops/: Vector2D.hpp  Vector3D.hpp
libs/core/src/: Object.cpp
libs/core/src/comp/: Component.cpp  ComponentHolder.cpp
libs/core/src/vector/: Vector2D.cpp  Vector3D.cpp
libs/core/src/vector/ops/: Vector2D.cpp  Vector3D.cpp
